# gnupg-windows-libassuan

./: CMakeLists.txt  libassuan-config.h.in
src/: assuan-handler.c  w32-fd-t.inc.h  w32-types.inc.h
